--- a/index.html
+++ b/index.html
@@ -824,8 +824,8 @@
 										<hr class="mx-auto w-25 custom-h-1 appear-animation" data-appear-animation="dividerProgress25" data-appear-animation-delay="200">
 									</div>
 									<p class="text-4 line-height-9 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400">
-										Phone us at <a href="tel:905-787-0396">(905) 787-0396</a> during <a href="#order">store hours</a>. 
-										For detailed questions or business inquiries, fill in the form below. We will respond as soon as possible.
+										Phone us at <a href="tel:905-787-0396">(905) 787-0396</a> during store <a href="#order">hours</a>. 
+										For detailed questions or business inquiries, fill in the form below.
 									</p>
 								</div>
 							</div>
