Added bubble tea to gallery

--- a/index.html
+++ b/index.html
@@ -836,6 +836,34 @@
 									BINGSU
 								</h2>
 							</li>
+
+							<li class="slide-overlay slide-overlay-level-2" data-transition="fade">
+								<img src="img/slides/slide-9.jpg"
+									 alt=""
+									 data-bgposition="center center"
+									 data-bgfit="cover"
+									 data-bgrepeat="no-repeat"
+									 class="rev-slidebg"
+									 data-bgparallax="8">
+
+								<h2 class="tp-caption text-color-dark"
+									data-frames='[{"from":"opacity:0.1;y:[100%];","speed":2000,"to":"opacity:0.1;","delay":1500,"ease":"Power3.easeInOut","mask":"x:0px;y:0;s:inherit;e:inherit;"},{"delay":"wait","speed":1000,"to":"o:0;","ease":"Power2.easeInOut"}]'
+									data-x="center"
+									data-y="center"
+									data-fontsize="['63','62','62','100']"
+									data-lineheight="['65','65','65','105']">
+									BUBBLE TEA
+								</h2>
+
+								<h2 class="tp-caption text-color-light"
+									data-frames='[{"from":"opacity:1;y:[100%];","speed":2000,"to":"opacity:1;","delay":1500,"ease":"Power3.easeInOut","mask":"x:0px;y:0;s:inherit;e:inherit;"},{"delay":"wait","speed":1000,"to":"o:0;","ease":"Power2.easeInOut"}]'
+									data-x="center"
+									data-y="center"
+									data-fontsize="['62','62','62','100']"
+									data-lineheight="['65','65','65','105']">
+									BUBBLE TEA
+								</h2>
+							</li>
 						</ul>
 					</div>
 				</div>
