--- a/index.html
+++ b/index.html
@@ -914,7 +914,7 @@
 								</div>
 							</div>
 	
-							<form id="contactForm" name="contact" class="contact-form p-4 rounded " method="POST" netlify>			
+							<form id="contactForm" name="contact" class="contact-form p-4 rounded " method="POST" netlify-honeypot="bot-field" netlify>			
 								<div class="p-2 appear-animation" data-appear-animation="maskUp">
 									<div class="form-row">
 										<div class="form-group col-lg-6">
