--- a/index.html
+++ b/index.html
@@ -614,12 +614,12 @@
 					<div id="revolutionSlider" class="slider rev_slider" data-version="5.4.8" data-plugin-revolution-slider data-plugin-options="{'sliderLayout': 'fullscreen', 'delay': 4000, 'gridwidth': 1140, 'gridheight': 800, 'responsiveLevels': [4096,1200,992,500], 'parallax': { 'type': 'scroll', 'origo': 'slidercenter', 'speed': 500, 'levels': [2,3,4,5,6,7,8,9,15,50], 'disable_onmobile': 'on' }, 'navigation' : {'arrows': { 'enable': true, 'style': 'arrows-style-1' }}}">
 						<ul>
 							<li class="slide-overlay slide-overlay-level-3" data-transition="fade">
-								<img data-src="img/slides/slide-1.jpg"
+								<img src="img/slides/slide-1.jpg"
 									 alt=""
 									 data-bgposition="center center"
 									 data-bgfit="cover"
 									 data-bgrepeat="no-repeat"
-									 class="rev-slidebg lazyload"
+									 class="rev-slidebg"
 									 data-bgparallax="8">
 
 								<h2 class="tp-caption text-color-dark"
@@ -642,12 +642,12 @@
 							</li>
 
 							<li class="slide-overlay slide-overlay-level-2" data-transition="fade">
-								<img data-src="img/slides/slide-2.jpg"
+								<img src="img/slides/slide-2.jpg"
 									 alt=""
 									 data-bgposition="center center"
 									 data-bgfit="cover"
 									 data-bgrepeat="no-repeat"
-									 class="rev-slidebg lazyload"
+									 class="rev-slidebg"
 									 data-bgparallax="8">
 
 								<h2 class="tp-caption text-color-dark"
@@ -670,12 +670,12 @@
 							</li>
 
 							<li class="slide-overlay slide-overlay-level-2" data-transition="fade">
-								<img data-src="img/slides/slide-3.jpg"
+								<img src="img/slides/slide-3.jpg"
 									 alt=""
 									 data-bgposition="center center"
 									 data-bgfit="cover"
 									 data-bgrepeat="no-repeat"
-									 class="rev-slidebg lazyload"
+									 class="rev-slidebg"
 									 data-bgparallax="8">
 
 								<h2 class="tp-caption text-color-dark"
@@ -698,12 +698,12 @@
 							</li>
 
 							<li class="slide-overlay slide-overlay-level-2" data-transition="fade">
-								<img data-src="img/slides/slide-4.jpg"
+								<img src="img/slides/slide-4.jpg"
 									 alt=""
 									 data-bgposition="center center"
 									 data-bgfit="cover"
 									 data-bgrepeat="no-repeat"
-									 class="rev-slidebg lazyload"
+									 class="rev-slidebg"
 									 data-bgparallax="8">
 
 								<h2 class="tp-caption text-color-dark"
@@ -726,12 +726,12 @@
 							</li>
 
 							<li class="slide-overlay slide-overlay-level-2" data-transition="fade">
-								<img data-src="img/slides/slide-5.jpg"
+								<img src="img/slides/slide-5.jpg"
 									 alt=""
 									 data-bgposition="center center"
 									 data-bgfit="cover"
 									 data-bgrepeat="no-repeat"
-									 class="rev-slidebg lazyload"
+									 class="rev-slidebg"
 									 data-bgparallax="8">
 
 								<h2 class="tp-caption text-color-dark"
@@ -754,12 +754,12 @@
 							</li>
 
 							<li class="slide-overlay slide-overlay-level-2" data-transition="fade">
-								<img data-src="img/slides/slide-6.jpg"
+								<img src="img/slides/slide-6.jpg"
 									 alt=""
 									 data-bgposition="center center"
 									 data-bgfit="cover"
 									 data-bgrepeat="no-repeat"
-									 class="rev-slidebg lazyload"
+									 class="rev-slidebg"
 									 data-bgparallax="8">
 
 								<h2 class="tp-caption text-color-dark"
@@ -782,12 +782,12 @@
 							</li>
 
 							<li class="slide-overlay slide-overlay-level-2" data-transition="fade">
-								<img data-src="img/slides/slide-7.jpg"
+								<img src="img/slides/slide-7.jpg"
 									 alt=""
 									 data-bgposition="center center"
 									 data-bgfit="cover"
 									 data-bgrepeat="no-repeat"
-									 class="rev-slidebg lazyload"
+									 class="rev-slidebg"
 									 data-bgparallax="8">
 
 								<h2 class="tp-caption text-color-dark"
@@ -810,12 +810,12 @@
 							</li>
 
 							<li class="slide-overlay slide-overlay-level-2" data-transition="fade">
-								<img data-src="img/slides/slide-8.jpg"
+								<img src="img/slides/slide-8.jpg"
 									 alt=""
 									 data-bgposition="center center"
 									 data-bgfit="cover"
 									 data-bgrepeat="no-repeat"
-									 class="rev-slidebg lazyload"
+									 class="rev-slidebg"
 									 data-bgparallax="8">
 
 								<h2 class="tp-caption text-color-dark"
@@ -838,12 +838,12 @@
 							</li>
 
 							<li class="slide-overlay slide-overlay-level-2" data-transition="fade">
-								<img data-src="img/slides/slide-9.jpg"
+								<img src="img/slides/slide-9.jpg"
 									 alt=""
 									 data-bgposition="center center"
 									 data-bgfit="cover"
 									 data-bgrepeat="no-repeat"
-									 class="rev-slidebg lazyload"
+									 class="rev-slidebg"
 									 data-bgparallax="8">
 
 								<h2 class="tp-caption text-color-dark"
@@ -866,12 +866,12 @@
 							</li>
 
 							<li class="slide-overlay slide-overlay-level-2" data-transition="fade">
-								<img data-src="img/slides/slide-10.jpg"
+								<img src="img/slides/slide-10.jpg"
 									 alt=""
 									 data-bgposition="center center"
 									 data-bgfit="cover"
 									 data-bgrepeat="no-repeat"
-									 class="rev-slidebg lazyload"
+									 class="rev-slidebg"
 									 data-bgparallax="8">
 
 								<h2 class="tp-caption text-color-dark"
@@ -914,7 +914,7 @@
 								</div>
 							</div>
 	
-							<form id="contactForm" name="contact" class="contact-form p-4 rounded " method="POST" netlify-honeypot="bot-field" netlify>			
+							<form id="contactForm" name="contact" class="contact-form p-4 rounded" method="POST" netlify-honeypot="bot-field" netlify>			
 								<div class="p-2 appear-animation" data-appear-animation="maskUp">
 									<div class="form-row">
 										<div class="form-group col-lg-6">
