--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">	
 
-		<title>Roll N Tea | Bubble Tea & Sushi</title>	
+		<title>Roll N Tea | Sushi & Bubble Tea in Richmond Hill</title>	
 
 		<meta name="keywords" content="Bubble tea,Tea,Sushi,Roll N Tea,Roll,Bingsu" />
-		<meta name="description" content="Best bubble tea and sushi in Bayview Hill.">
+		<meta name="description" content="Order Online for Takeout / Pickup. Here at Roll N Tea you'll experience delicious Sushi, Bubble Tea cuisine. Try our mouth-watering dishes, carefully prepared with fresh ingredients! At Roll N Tea, our recipe for success is simple – Great food & care makes customers return every time.">
 		<meta name="author" content="Matthew Ao">
 
 		<!-- Favicon -->
@@ -73,6 +73,14 @@
 					data-lineheight="['25','25','25','60']">WELCOME TO</div>
 
 				<h1 class="tp-caption font-weight-bold text-color-light"
+					style="display:none;"
+					data-frames='[{"from":"opacity:1;y:[100%];","speed":2000,"to":"opacity:1;","delay":1500,"ease":"Power3.easeInOut","mask":"x:0px;y:0;s:inherit;e:inherit;"},{"delay":"wait","speed":1000,"to":"o:0;","ease":"Power2.easeInOut"}]'
+					data-x="center"
+					data-y="center"
+					data-fontsize="['62','62','62','100']"
+					data-lineheight="['65','65','65','105']">Roll N Tea</h1>
+
+				<h1 class="tp-caption font-weight-bold text-color-light"
 					data-frames='[{"from":"opacity:1;y:[100%];","speed":2000,"to":"opacity:1;","delay":1500,"ease":"Power3.easeInOut","mask":"x:0px;y:0;s:inherit;e:inherit;"},{"delay":"wait","speed":1000,"to":"o:0;","ease":"Power2.easeInOut"}]'
 					data-x="center"
 					data-y="center"
@@ -114,7 +122,15 @@
 					data-x="center"
 					data-y="center" data-voffset="['-48','-48','-48','-90']"
 					data-fontsize="['20','20','20','50']"
-					data-lineheight="['25','25','25','60']">THE BEST SUSHI ROLLS AND</div>
+					data-lineheight="['25','25','25','60']">THE BEST SUSHI AND</div>
+
+				<h2 class="tp-caption font-weight-bold text-color-light"
+					style="display:none;"
+					data-frames='[{"from":"opacity:1;y:[100%];","speed":2000,"to":"opacity:1;","delay":1500,"ease":"Power3.easeInOut","mask":"x:0px;y:0;s:inherit;e:inherit;"},{"delay":"wait","speed":1000,"to":"o:0;","ease":"Power2.easeInOut"}]'
+					data-x="center"
+					data-y="center"
+					data-fontsize="['62','62','62','100']"
+					data-lineheight="['65','65','65','105']">Richmond Hill</h2>
 
 				<h2 class="tp-caption font-weight-bold text-color-light"
 					data-frames='[{"from":"opacity:1;y:[100%];","speed":2000,"to":"opacity:1;","delay":1500,"ease":"Power3.easeInOut","mask":"x:0px;y:0;s:inherit;e:inherit;"},{"delay":"wait","speed":1000,"to":"o:0;","ease":"Power2.easeInOut"}]'
