--- a/index.html
+++ b/index.html
@@ -94,8 +94,10 @@
 					data-fontsize="['17','17','17','50']"
 					data-lineheight="['22','22','22','60']">Sushi, bubble tea, chill, study.</div>
 
+				<!-- GLORIAFOOD BUTTON -->
 				<a class="tp-caption btn btn-primary btn-outline font-weight-bold border-width-3 text-color-light"
-					href="#about"
+					data-glf-cuid="ef7fe87d-0baa-4c18-bd82-0ba941002dd5" 
+					data-glf-ruid="160e8197-eae9-49f8-80e0-c352b0ebb91c" 
 					data-hash
 					data-hash-offset="92"
 					data-frames='[{"delay":2800,"speed":2000,"frame":"0","from":"y:50%;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;fb:0;","ease":"Power3.easeInOut"}]'
@@ -106,7 +108,8 @@
 					data-paddingleft="['40','40','40','80']"
 					data-paddingright="['40','40','40','80']"
 					data-fontsize="['13','13','13','45']"
-					data-lineheight="['18','18','18','55']">ROLL IN</a>
+					data-lineheight="['18','18','18','55']">ORDER NOW</a>
+					
 			</li>
 			<li class="slide-overlay slide-overlay-level-8" data-transition="fade">
 				<img src="img/slides/slide-2.jpg"  
@@ -146,8 +149,10 @@
 					data-fontsize="['17','17','17','50']"
 					data-lineheight="['22','22','22','60']">in Richmond Hill.</div>
 
+				<!-- GLORIAFOOD BUTTON -->
 				<a class="tp-caption btn btn-primary btn-outline font-weight-bold border-width-3 text-color-light"
-					href="#about"
+					data-glf-cuid="ef7fe87d-0baa-4c18-bd82-0ba941002dd5" 
+					data-glf-ruid="160e8197-eae9-49f8-80e0-c352b0ebb91c" 
 					data-hash
 					data-hash-offset="92"
 					data-frames='[{"delay":2800,"speed":2000,"frame":"0","from":"y:50%;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;fb:0;","ease":"Power3.easeInOut"}]'
@@ -158,7 +163,7 @@
 					data-paddingleft="['40','40','40','80']"
 					data-paddingright="['40','40','40','80']"
 					data-fontsize="['13','13','13','45']"
-					data-lineheight="['18','18','18','55']">ROLL IN</a>
+					data-lineheight="['18','18','18','55']">ORDER NOW</a>
 
 			</li>
 		</ul>
