--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 					data-bgparallax="8">
 
 				<div class="tp-caption text-color-primary"
-					data-frames='[{"from":"opacity:1;y:[100%];","speed":2000,"to":"opacity:1;","delay":1000,"ease":"Power3.easeInOut","mask":"x:0px;y:0;s:inherit;e:inherit;"},{"delay":"wait","speed":1000,"to":"o:0;","ease":"Power2.easeInOut"}]'
+					data-frames='[{"from":"opacity:1;y:[100%];","speed":2000,"to":"opacity:1;","delay":1000,"ease":"Power3.easeInOut","mask":"x:0px;y:0;s:inherit;e:inherit;"}]'
 					data-x="center"
 					data-y="center" data-voffset="['-48','-48','-48','-90']"
 					data-fontsize="['20','20','20','50']"
@@ -74,25 +74,25 @@
 
 				<h1 class="tp-caption font-weight-bold text-color-light"
 					style="display:none;"
-					data-frames='[{"from":"opacity:1;y:[100%];","speed":2000,"to":"opacity:1;","delay":1500,"ease":"Power3.easeInOut","mask":"x:0px;y:0;s:inherit;e:inherit;"},{"delay":"wait","speed":1000,"to":"o:0;","ease":"Power2.easeInOut"}]'
+					data-frames='[{"from":"opacity:1;y:[100%];","speed":2000,"to":"opacity:1;","delay":1500,"ease":"Power3.easeInOut","mask":"x:0px;y:0;s:inherit;e:inherit;"}]'
 					data-x="center"
 					data-y="center"
 					data-fontsize="['62','62','62','100']"
 					data-lineheight="['65','65','65','105']">Roll N Tea</h1>
 
 				<h1 class="tp-caption font-weight-bold text-color-light"
-					data-frames='[{"from":"opacity:1;y:[100%];","speed":2000,"to":"opacity:1;","delay":1500,"ease":"Power3.easeInOut","mask":"x:0px;y:0;s:inherit;e:inherit;"},{"delay":"wait","speed":1000,"to":"o:0;","ease":"Power2.easeInOut"}]'
+					data-frames='[{"from":"opacity:1;y:[100%];","speed":2000,"to":"opacity:1;","delay":1500,"ease":"Power3.easeInOut","mask":"x:0px;y:0;s:inherit;e:inherit;"}]'
 					data-x="center"
 					data-y="center"
 					data-fontsize="['62','62','62','100']"
 					data-lineheight="['65','65','65','105']"><img src="img/logo-full.png"></h1>
 
 				<div class="tp-caption text-color-light font-weight-light"
-					data-frames='[{"from":"opacity:0;","speed":300,"to":"o:1;","delay":2300,"split":"chars","splitdelay":0.05,"ease":"Power2.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'
+					data-frames='[{"from":"opacity:0;","speed":300,"to":"o:1;","delay":2300,"split":"chars","splitdelay":0.05,"ease":"Power2.easeInOut"}]'
 					data-x="center"
 					data-y="center" data-voffset="['53','53','53','100']"
 					data-fontsize="['17','17','17','50']"
-					data-lineheight="['22','22','22','60']">Sushi, bubble tea, chill, study.</div>
+					data-lineheight="['22','22','22','60']">Best sushi & bubble tea in Richmond Hill.</div>
 
 				<!-- GLORIAFOOD BUTTON -->
 				<a class="tp-caption btn btn-primary btn-outline font-weight-bold border-width-3 text-color-light"
@@ -100,7 +100,7 @@
 					data-glf-ruid="160e8197-eae9-49f8-80e0-c352b0ebb91c" 
 					data-hash
 					data-hash-offset="92"
-					data-frames='[{"delay":2800,"speed":2000,"frame":"0","from":"y:50%;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;fb:0;","ease":"Power3.easeInOut"}]'
+					data-frames='[{"delay":2800,"speed":2000,"frame":"0","from":"y:50%;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"}]'
 					data-x="center"
 					data-y="center" data-voffset="['130','130','130','280']"
 					data-paddingtop="['18','18','18','30']"
@@ -111,7 +111,7 @@
 					data-lineheight="['18','18','18','55']">ORDER NOW</a>
 					
 			</li>
-			<li class="slide-overlay slide-overlay-level-8" data-transition="fade">
+			<!--li class="slide-overlay slide-overlay-level-8" data-transition="fade">
 				<img src="img/slides/slide-2.jpg"  
 					alt=""
 					data-bgposition="center center" 
@@ -149,7 +149,6 @@
 					data-fontsize="['17','17','17','50']"
 					data-lineheight="['22','22','22','60']">in Richmond Hill.</div>
 
-				<!-- GLORIAFOOD BUTTON -->
 				<a class="tp-caption btn btn-primary btn-outline font-weight-bold border-width-3 text-color-light"
 					data-glf-cuid="ef7fe87d-0baa-4c18-bd82-0ba941002dd5" 
 					data-glf-ruid="160e8197-eae9-49f8-80e0-c352b0ebb91c" 
@@ -165,7 +164,7 @@
 					data-fontsize="['13','13','13','45']"
 					data-lineheight="['18','18','18','55']">ORDER NOW</a>
 
-			</li>
+			</li-->
 		</ul>
 	</div>
 </div>
