--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 					data-lineheight="['65','65','65','105']"><img src="img/logo-full.png"></h1>
 
 				<div class="tp-caption text-color-light font-weight-light"
-					data-frames='[{"from":"opacity:0;","speed":300,"to":"o:1;","delay":2300,"split":"chars","splitdelay":0.05,"ease":"Power2.easeInOut"}]'
+					data-frames='[{"from":"opacity:0;","speed":300,"to":"o:1;","delay":2300,"split":"chars","splitdelay":0.05,"ease":"Power2.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'
 					data-x="center"
 					data-y="center" data-voffset="['53','53','53','100']"
 					data-fontsize="['17','17','17','50']"
