--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 					data-fontsize="['20','20','20','50']"
 					data-lineheight="['25','25','25','60']">WELCOME TO</div>
 
+				<!-- hidden h1 -->
 				<h1 class="tp-caption font-weight-bold text-color-light"
 					style="display:none;"
 					data-frames='[{"from":"opacity:1;y:[100%];","speed":2000,"to":"opacity:1;","delay":1500,"ease":"Power3.easeInOut","mask":"x:0px;y:0;s:inherit;e:inherit;"}]'
@@ -86,13 +87,22 @@
 					data-y="center"
 					data-fontsize="['62','62','62','100']"
 					data-lineheight="['65','65','65','105']"><img src="img/logo-full.png"></h1>
-
+				
 				<div class="tp-caption text-color-light font-weight-light"
 					data-frames='[{"from":"opacity:0;","speed":300,"to":"o:1;","delay":2300,"split":"chars","splitdelay":0.05,"ease":"Power2.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'
 					data-x="center"
 					data-y="center" data-voffset="['53','53','53','100']"
 					data-fontsize="['17','17','17','50']"
 					data-lineheight="['22','22','22','60']">Best sushi & bubble tea in Richmond Hill.</div>
+
+				<!-- hidden h2 -->
+				<h2 class="tp-caption font-weight-bold text-color-light"
+					style="display:none;"
+					data-frames='[{"from":"opacity:1;y:[100%];","speed":2000,"to":"opacity:1;","delay":1500,"ease":"Power3.easeInOut","mask":"x:0px;y:0;s:inherit;e:inherit;"},{"delay":"wait","speed":1000,"to":"o:0;","ease":"Power2.easeInOut"}]'
+					data-x="center"
+					data-y="center"
+					data-fontsize="['62','62','62','100']"
+					data-lineheight="['65','65','65','105']">Richmond Hill</h2>
 
 				<!-- GLORIAFOOD BUTTON -->
 				<a class="tp-caption btn btn-primary btn-outline font-weight-bold border-width-3 text-color-light"
