--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<title>Roll N Tea | Sushi & Bubble Tea in Richmond Hill</title>	
 
 		<meta name="keywords" content="Bubble tea,Tea,Sushi,Roll N Tea,Roll,Bingsu" />
-		<meta name="description" content="Order Online for Takeout / Pickup. Here at Roll N Tea you'll experience delicious Sushi, Bubble Tea cuisine. Try our mouth-watering dishes, carefully prepared with fresh ingredients! At Roll N Tea, our recipe for success is simple – Great food & care makes customers return every time.">
+		<meta name="description" content="At Roll N Tea, we serve a delightful fusion of Korean and Japanese cuisine. We serve the best sushi rolls and bubble tea in Richmond Hill, at affordable prices. Try our mouth-watering dishes, carefully prepared with fresh ingredients! At Roll N Tea, our recipe for success is simple – great food & care makes customers return every time.">
 		<meta name="author" content="Matthew Ao">
 
 		<!-- Favicon -->
