--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 								</div>
 
 								<!-- GLORIAFOOD BUTTON -->
-								<a data-glf-cuid="ef7fe87d-0baa-4c18-bd82-0ba941002dd5" data-glf-ruid="160e8197-eae9-49f8-80e0-c352b0ebb91c" class="btn btn-primary btn-outline font-weight-bold border-width-3 btn-px-5 py-3 appear-animation img-thumbnail-no-borders img-thumbnail-hover-icon lightbox" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="650">ORDER ONLINE</a>
+								<a data-glf-cuid="ef7fe87d-0baa-4c18-bd82-0ba941002dd5" data-glf-ruid="160e8197-eae9-49f8-80e0-c352b0ebb91c" class="btn btn-primary btn-outline font-weight-bold border-width-3 btn-px-5 py-3 appear-animation img-thumbnail-no-borders img-thumbnail-hover-icon lightbox" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="650">CLICK TO ORDER</a>
 								
 							</div>
 							<div class="col-md-6 text-center">
