--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<title>Roll N Tea | Sushi & Bubble Tea in Richmond Hill</title>	
 
 		<meta name="keywords" content="Bubble tea,Tea,Sushi,Roll N Tea,Roll,Bingsu" />
-		<meta name="description" content="At Roll N Tea, we serve a delightful fusion of Korean and Japanese cuisine. We serve the best sushi rolls and bubble tea in Richmond Hill, at incredibly affordable prices! Online ordering available with pickup at the counter.">
+		<meta name="description" content="Welcome to Roll N Tea! At Roll N Tea, we serve a delightful fusion of Korean and Japanese cuisine. Come taste the best sushi rolls and bubble tea in Richmond Hill, at incredibly affordable prices! Online ordering available with pickup at the counter.">
 		<meta name="author" content="Matthew Ao">
 
 		<!-- Favicon -->
@@ -280,10 +280,10 @@
 											</div>
 										</div>
 
-									</div>
+									</div>-->
 
 									<a data-toggle="collapse" href="#aboutViewMore" role="button" aria-expanded="false" aria-controls="aboutViewMore" class="btn btn-primary btn-outline font-weight-bold border-width-3 btn-px-4 py-3 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="800" data-toggle-text-click="VIEW PHOTOS..." data-toggle-text-click-alt="COLLAPSE...">VIEW PHOTOS...</a>
-									--> 
+									
 								</div>
 							</div>
 							<div class="col-md-6">
