--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 					data-x="center"
 					data-y="center"
 					data-fontsize="['62','62','62','100']"
-					data-lineheight="['65','65','65','105']">Richmond Hill</h2>
+					data-lineheight="['65','65','65','105']">Roll N Tea Richmond Hill</h2>
 
 				<!-- GLORIAFOOD BUTTON -->
 				<a class="tp-caption btn btn-primary btn-outline font-weight-bold border-width-3 text-color-light"
@@ -280,10 +280,10 @@
 											</div>
 										</div>
 
-									</div>-->
+									</div>
 
 									<a data-toggle="collapse" href="#aboutViewMore" role="button" aria-expanded="false" aria-controls="aboutViewMore" class="btn btn-primary btn-outline font-weight-bold border-width-3 btn-px-4 py-3 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="800" data-toggle-text-click="VIEW PHOTOS..." data-toggle-text-click-alt="COLLAPSE...">VIEW PHOTOS...</a>
-									
+									-->
 								</div>
 							</div>
 							<div class="col-md-6">
