Added social icons and fixed store hours

--- a/index.html
+++ b/index.html
@@ -280,10 +280,17 @@
 											</div>
 										</div>
 
-									</div>
+									</div>-->
 
-									<a data-toggle="collapse" href="#aboutViewMore" role="button" aria-expanded="false" aria-controls="aboutViewMore" class="btn btn-primary btn-outline font-weight-bold border-width-3 btn-px-4 py-3 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="800" data-toggle-text-click="VIEW PHOTOS..." data-toggle-text-click-alt="COLLAPSE...">VIEW PHOTOS...</a>
-									-->
+									<br>
+									<div class="appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="600">
+										<ul class="social-icons social-icons-dark-2 social-icons-big">
+											<li class="social-icons-yelp"><a href="https://www.yelp.ca/biz/roll-n-tea-richmond-hill" target="_blank" title="Yelp"><i class="fab fa-yelp"></i></a></li>
+											<li class="social-icons-instagram"><a href="https://www.instagram.com/roll_n_tea/" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a></li>
+											<li class="social-icons-facebook"><a href="https://www.facebook.com/Rollntea" target="_blank" title="Facebook"><i class="fab fa-facebook"></i></a></li>
+										</ul>
+									</div>
+									
 								</div>
 							</div>
 							<div class="col-md-6">
@@ -302,6 +309,7 @@
 								</div>
 								<div class="appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="600">
 									<p class="font-weight-light text-color-light text-3 opacity-7 px-4">Don't want to wait in line? Order through our online menu to save time. Pickup and pay <b>at the counter.</b></p>
+									<p class="font-weight-light text-color-light text-3 opacity-7 px-4"><b>NOTE: We are temporarily closed due to COVID-19. We are planning to re-open in July.</b></p>
 								</div>
 
 								<!-- GLORIAFOOD BUTTON -->
@@ -316,7 +324,7 @@
 									</div>
 									<div class="col-md-6 col-lg-4 appear-animation" data-appear-animation="fadeInLeftShorter" data-appear-animation-delay="700">
 										<h2 class="text-color-light font-weight-semibold text-8 negative-ls-1 mb-3">SAT ONLY</h2>
-										<p class="font-weight-light text-color-light opacity-7 mb-0"><span class="d-block">12:00 AM</span> TO <span class="d-block">6:00 PM</span></p>
+										<p class="font-weight-light text-color-light opacity-7 mb-0"><span class="d-block">12:00 PM</span> TO <span class="d-block">6:00 PM</span></p>
 									</div>
 								</div>
 							</div>
@@ -1006,7 +1014,9 @@
 							<p class="font-weight-light text-color-light line-height-4 opacity-6 mb-2 px-lg-5 mx-lg-4">10066 Bayview Ave, #8, Richmond Hill 
 								<br><a href="tel:905-787-0396" class="text-color-light">(905) 787-0396</a></p>
 							<ul class="social-icons social-icons-clean social-icons-icon-light">
+								<li class="social-icons-yelp"><a href="https://www.yelp.ca/biz/roll-n-tea-richmond-hill" target="_blank" title="Yelp"><i class="fab fa-yelp"></i></a></li>
 								<li class="social-icons-instagram"><a href="https://www.instagram.com/roll_n_tea/" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a></li>
+								<li class="social-icons-facebook"><a href="https://www.facebook.com/Rollntea" target="_blank" title="Facebook"><i class="fab fa-facebook"></i></a></li>
 							</ul>
 						</div>
 						<div class="col-md-4 text-center">
