Added yelp, instagram and uber

--- a/index.html
+++ b/index.html
@@ -262,7 +262,9 @@
 									</div>
 									<p class="text-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400">At Roll N Tea, we serve a delightful fusion of Korean and Japanese cuisine.</p>
 									<div class="appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="600">
-										<p class="opacity-8 mb-4">From our delicately handcrafted sushi rolls to our delicious bulgogi bento, we are home to a beautiful palette of Japanese and Korean foods to satisfy your cravings. On top of that, we serve some of the best bubble tea in all of Richmond Hill.</p>
+										<p class="opacity-8 mb-4">From our delicately handcrafted sushi rolls to our delicious bulgogi bento, 
+											we are home to a beautiful palette of Japanese and Korean foods to satisfy your cravings. 
+											On top of that, we serve some of the best bubble tea in all of Richmond Hill.</p>
 									</div>
 
 									<!--div class="collapse" id="aboutViewMore">
@@ -287,7 +289,7 @@
 										<ul class="social-icons social-icons-dark-2 social-icons-big">
 											<li class="social-icons-yelp"><a href="https://www.yelp.ca/biz/roll-n-tea-richmond-hill" target="_blank" title="Yelp"><i class="fab fa-yelp"></i></a></li>
 											<li class="social-icons-instagram"><a href="https://www.instagram.com/roll_n_tea/" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a></li>
-											<li class="social-icons-facebook"><a href="https://www.facebook.com/Rollntea" target="_blank" title="Facebook"><i class="fab fa-facebook"></i></a></li>
+											<li class="social-icons-uber"><a href="https://www.ubereats.com/ca/toronto/food-delivery/roll-n-tea/rJTyz6mAQVqLxuiHd37Q9Q" target="_blank" title="UberEats"><i class="fab fa-uber"></i></a></li>
 										</ul>
 									</div>
 									
@@ -1016,7 +1018,7 @@
 							<ul class="social-icons social-icons-clean social-icons-icon-light">
 								<li class="social-icons-yelp"><a href="https://www.yelp.ca/biz/roll-n-tea-richmond-hill" target="_blank" title="Yelp"><i class="fab fa-yelp"></i></a></li>
 								<li class="social-icons-instagram"><a href="https://www.instagram.com/roll_n_tea/" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a></li>
-								<li class="social-icons-facebook"><a href="https://www.facebook.com/Rollntea" target="_blank" title="Facebook"><i class="fab fa-facebook"></i></a></li>
+								<li class="social-icons-uber"><a href="https://www.ubereats.com/ca/toronto/food-delivery/roll-n-tea/rJTyz6mAQVqLxuiHd37Q9Q" target="_blank" title="UberEats"><i class="fab fa-uber"></i></a></li>
 							</ul>
 						</div>
 						<div class="col-md-4 text-center">
