--- a/index.html
+++ b/index.html
@@ -264,7 +264,10 @@
 									<div class="appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="600">
 										<p class="opacity-8 mb-4">From our delicately handcrafted sushi rolls to our delicious bulgogi bento, 
 											we are home to a beautiful palette of Japanese and Korean foods to satisfy your cravings. 
-											On top of that, we serve some of the best bubble tea in all of Richmond Hill.</p>
+											On top of that, we serve some of the best bubble tea in all of Richmond Hill.
+											<br><br>
+											Check us out on our other platforms by clicking the links below! We are available on Yelp, Instagram and UberEats.
+										</p>
 									</div>
 
 									<!--div class="collapse" id="aboutViewMore">
